Used IntelliJ Inspect to find some issues and fix them and help with migration to Java 17